// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClassForm (Simplified) > Snapshot Tests > should match snapshot in create mode 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-y-2"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for="name"
      >
        Class Name 
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="name"
        placeholder="Enter class name"
        required=""
        value=""
      />
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Additional fields (course, program, dates, etc.) coming soon...
    </div>
  </div>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      type="submit"
    >
      <svg
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Create
       Class
    </button>
  </div>
</form>
`;

exports[`ClassForm (Simplified) > Snapshot Tests > should match snapshot in edit mode 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-y-2"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for="name"
      >
        Class Name 
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="name"
        placeholder="Enter class name"
        required=""
        value="Introduction to Programming - Spring 2026"
      />
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Additional fields (course, program, dates, etc.) coming soon...
    </div>
  </div>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      type="submit"
    >
      <svg
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Update
       Class
    </button>
  </div>
</form>
`;

exports[`ClassForm (Simplified) > Snapshot Tests > should match snapshot in loading state 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-y-2"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for="name"
      >
        Class Name 
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        disabled=""
        id="name"
        placeholder="Enter class name"
        required=""
        value=""
      />
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Additional fields (course, program, dates, etc.) coming soon...
    </div>
  </div>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      disabled=""
      type="submit"
    >
      <svg
        class="lucide lucide-loader-circle h-4 w-4 mr-2 animate-spin"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M21 12a9 9 0 1 1-6.219-8.56"
        />
      </svg>
      <svg
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Create
       Class
    </button>
  </div>
</form>
`;

exports[`ClassForm (Simplified) > Snapshot Tests > should match snapshot with cancel button 1`] = `
<form
  class="space-y-6"
>
  <div
    class="space-y-4"
  >
    <div
      class="space-y-2"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for="name"
      >
        Class Name 
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="name"
        placeholder="Enter class name"
        required=""
        value=""
      />
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Additional fields (course, program, dates, etc.) coming soon...
    </div>
  </div>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 border border-input bg-background hover:bg-accent hover:text-accent-foreground h-10 px-4 py-2"
      type="button"
    >
      <svg
        class="lucide lucide-x h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
      Cancel
    </button>
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      type="submit"
    >
      <svg
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Create
       Class
    </button>
  </div>
</form>
`;

exports[`ClassForm (Simplified) > Snapshot Tests > should match snapshot with error 1`] = `
<form
  class="space-y-6"
>
  <div
    class="relative w-full rounded-lg border p-4 [&>svg~*]:pl-7 [&>svg+div]:translate-y-[-3px] [&>svg]:absolute [&>svg]:left-4 [&>svg]:top-4 border-destructive/50 text-destructive dark:border-destructive [&>svg]:text-destructive"
    role="alert"
  >
    <p>
      Test error
    </p>
  </div>
  <div
    class="space-y-4"
  >
    <div
      class="space-y-2"
    >
      <label
        class="text-sm font-medium leading-none peer-disabled:cursor-not-allowed peer-disabled:opacity-70"
        for="name"
      >
        Class Name 
        <span
          class="text-destructive"
        >
          *
        </span>
      </label>
      <input
        class="flex h-10 w-full rounded-md border border-input bg-background px-3 py-2 text-sm ring-offset-background file:border-0 file:bg-transparent file:text-sm file:font-medium placeholder:text-muted-foreground focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:cursor-not-allowed disabled:opacity-50"
        id="name"
        placeholder="Enter class name"
        required=""
        value=""
      />
    </div>
    <div
      class="text-sm text-muted-foreground"
    >
      Additional fields (course, program, dates, etc.) coming soon...
    </div>
  </div>
  <div
    class="flex gap-2"
  >
    <button
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md text-sm font-medium ring-offset-background transition-colors focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 bg-primary text-primary-foreground hover:bg-primary/90 h-10 px-4 py-2"
      type="submit"
    >
      <svg
        class="lucide lucide-save h-4 w-4 mr-2"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M19 21H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11l5 5v11a2 2 0 0 1-2 2z"
        />
        <polyline
          points="17 21 17 13 7 13 7 21"
        />
        <polyline
          points="7 3 7 8 15 8"
        />
      </svg>
      Create
       Class
    </button>
  </div>
</form>
`;
